# siv

./: .eslintrc.json  .gitignore  .release-it.json  CHANGELOG.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
public/: latest-for-debug.json
src/: constants.ts  init.ts  invokes.ts  store.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: capabilities.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  utils.rs
src/components/: App.tsx  DropArea.tsx  TitleBar.tsx  UpdaterDialog.tsx  Viewer.tsx
src/components/ui/: button.tsx  dialog.tsx
src/layouts/: Layout.astro
src/lib/: utils.ts
src/pages/: index.astro
