[package]
name = "siv"
version = "0.7.0"
description = "SIV is a Simple Image Viewer"
authors = ["andots"]
repository = "https://github.com/andots/siv"
default-run = "siv"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [
  "updater",
  "fs-exists",
  "fs-read-dir",
  "window-start-dragging",
  "window-create",
  "window-close",
  "window-minimize",
  "window-unminimize",
  "window-hide",
  "window-unmaximize",
  "window-show",
  "window-maximize",
  "app-all",
  "window-set-title",
  "protocol-all",
  "path-all",
  "cli",
] }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows.git" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
