[package]
name = "siv"
version = "0.8.1"
description = "SIV is a Simple Image Viewer"
authors = ["andots"]
repository = "https://github.com/andots/siv"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows.git" }
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-cli = "2.0.0-beta"

# serde = { version = "1.0", features = ["derive"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size

# [lib]
# crate-type = ["staticlib", "cdylib", "rlib"]
