[package]
name = "siv"
version = "0.11.1"
description = "SIV is a Simple Image Viewer"
authors = ["andots"]
repository = "https://github.com/andots/siv"
default-run = "siv"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [
  "process-relaunch",
  "process-exit",
  "global-shortcut-all",
  "updater",
  "window-start-dragging",
  "window-create",
  "window-close",
  "window-minimize",
  "window-unminimize",
  "window-hide",
  "window-unmaximize",
  "window-show",
  "window-maximize",
  "app-all",
  "window-set-title",
  "protocol-all",
  "path-all",
  "cli",
] }
window-shadows = { git = "https://github.com/tauri-apps/window-shadows.git" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = [
  "colored",
] }
log = "^0.4"
walkdir = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
